--- a/styles/Uses.module.css
+++ b/styles/Uses.module.css
@@ -32,6 +32,9 @@
   z-index: 3;
   user-select: none;
   pointer-events: none;
+  /* -webkit-text-stroke: 0.008em var(--pri-neutral-inverse); */
+  /* -webkit-text-fill-color: transparent; */
+  text-shadow: 0px 0px 0.02em var(--pri-neutral-inverse);
 }
 
 .main h2 {
